--- a/public/locales/ua/translation.json
+++ b/public/locales/ua/translation.json
@@ -11,5 +11,16 @@
         "password": "Пароль",
         "age": "Вік"
     },
+    "errors": {
+        "name": "Будь ласка введіть Імʼя",
+        "lastName": "Введить також Прізвище",
+        "email": "Будь ласка введіть реальний адрес",
+        "age": "Кіко рочків?",
+        "ageMore": "Малувато",
+        "ageLess": "Коли в гроб",
+        "password": "Придумайте пароль",
+        "phone": "Введіть свій номер телефону"
+    },
+    "send": "Відправлено успішно!",
     "submit": "Відправляй"
 }
